--- a/models/sources.yml
+++ b/models/sources.yml
@@ -3,5 +3,5 @@ version: 2
 sources:
   - name: sales_data_source
     tables:
-      - name: stg_sales_data
-      - name: stg_constants
+      - name: sales_data
+      - name: constants
